# ai-client

./: .gitignore  README.md  bun-env.d.ts  package.json  tsconfig.json  vite.config.js  vite.config.ts
assets/: style.css
src/: index.js  index.ts  panel.js  panel.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
